third_party/rust/cstr/tests/compile_fail/non-str.rs
use cstr::cstr;

fn main() {
    let _foo = cstr!(1);
    let _foo = cstr!(("a"));
    let _foo = cstr!(&1);
}
